# tools

./: .gitignore  AGENTS.md  CNAME  LICENSE  README.md  home.test.js  index.html  libraries.md  openai.json  package-lock.json  package.json  prompts.md  pyproject.toml  screenshot.mjs  test-local.sh  test-setup.sh  tools.js  tools.json
aiscrapers/: README.md  aiscrapers.test.js  chatgptscraper.js  claudescraper.js  config.json  geminiscraper.js  index.html  prompts.md  script.js
askai/: README.md  askai.test.js  index.html  prompts.md  script.js
bootstrappicker/: README.md  bootstrappicker.min.js  bootstrappicker.test.js  index.html  script.js
codexlog/: README.md  codexlog.test.js  config.json  index.html  script.js
colortable/: README.md  colortable.test.js  index.html  prompts.md  script.js
common/: aiconfig.js  api_fields.js  async-queue.js  bootstrap-loading.js  clipboard-utils.js  csv.js  demo.js  download-helper.js  download.js  fetch-utils.js  file-reader.js  local-cache.js  markdown-utils.js  openai.js  progress-bar.js  table-utils.js  testutils.js  toast.js  ui.js  utils.js
comparator/: README.md  index.html  script.js
configurator/: config.json  index.html  script.js
copylinks/: README.md  config.json  copylinks.js  index.html  script.js
dataextractor/: README.md  config.json  index.html  script.js
daydream/: README.md  daydream.jsonl  index.html  script.js  test.test.js
discoursescraper/: README.md  (+7 more)
spotifyplaylist/: README.md  __init__.py  main.py  pyproject.toml
spotifyplaylist/public/: index.html
spotifyplaylist/public/js/: app.js
(+331 files in other folders)
