[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotifyplaylist"
version = "0.1.0"
description = "A Spotify playlist generator"
authors = [{name = "S Anand", email = "root.node@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = ["fastapi", "uvicorn", "spotipy"]

[project.scripts]
spotifyplaylist = "main:main"

[tool.hatch.metadata]
dynamic = ["version"]
